--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.14.0",
     "fetch": "^1.1.0",
     "mongodb": "^2.2.10",
+    "node-fetch": "^1.6.3",
     "whatwg-fetch": "^1.0.0"
   }
 }
